# zoolandv2

./: CMakeLists-bk.txt.  CMakeLists.txt  Form.qml  Main.qml  README.md  android.pri  androidselectfoldershared.cpp  androidselectfoldershared.h  androidshare.cpp  androidshare.h  linux.pri  linux_config.pri  main.cpp  main.qml  mkLogo.sh  qml.qrc  qmlclipboardadapter.h  qmlerrorlogger.cpp  qmlerrorlogger.h  setEpheFolderFor1200To2100.sh  swissephmanager.cpp  swissephmanager.h  ucommit.txt  ul.cpp  ul.h  unikargsproc.cpp  unikargsproc.h  unikqprocess.cpp  unikqprocess.h  zoolandv2.pro
android/: AndroidManifest.xml  ucommit.txt
android/assets/jsons/: Nico.json  Ricardo.json
android/assets/modules/ZmButton/: ZmButton_v1.qml  qmldir
android/assets/modules/ZmComboBox/: ZmComboBox_v1.qml  qmldir
android/assets/modules/ZmDialogConfirm/: ZmDialogConfirm_v1.qml  qmldir
android/assets/modules/ZmMoveTime/: ZmMoveTime_v1.qml  qmldir
android/assets/modules/ZoolElementsView/: ZoolElementsView_v_1_0.qml
android/assets/modules/ZoolElementsView/ZoolGroupElementItems/: ZoolGroupElementItems_v_1_0.qml
android/assets/modules/ZoolElementsView/ZoolGroupElementItemsPlanets/ZoolElementItemPlanet/: ZoolElementItemPlanet_v_1_0.qml
android/assets/modules/ZoolandMap/: ZoolandMap_v1.qml  ZoolandMap_v2.qml  ZoolandMap_v3.qml  qmldir
android/assets/modules/ZoolandMap/Zm/: Zm_v1.qml  qmldir
android/assets/modules/ZoolandMap/ZmAspsCircle/: AspShapeLine.qml  ZmAspsCircle_v1.qml  qmldir
android/assets/modules/ZoolandMap/ZmBodiesCircle/: ZmBodiesCircle_v1.qml  qmldir
android/assets/modules/ZoolandMap/ZmBodiesCircle/ZmBodie/: ZmBodie_v1.qml  qmldir
android/assets/modules/ZoolandMap/ZmBodiesCircleExt/: ZmBodiesCircleExt_v1.qml  qmldir
android/assets/modules/ZoolandMap/ZmBodiesCircleExt/ZmBodie/: ZmBodie_v1.qml
android/assets/modules/ZoolandMap/ZmHousesCircle/: ZmHousesCircle_v1.qml  qmldir
android/assets/modules/ZoolandMap/ZmHousesCircle/ZmHouseArc/: ZmHouseArc_v1.qml  qmldir
android/assets/modules/ZoolandMap/ZmSignsCircle/: ZmSignsCircle_v1.qml  qmldir
android/assets/modules/ZoolandMap/ZmSignsCircle/ZmSignArc/: ZmSignArc_v1.qml  qmldir
android/assets/modules/ZoolandMap/ZmSignsCircle/ZmSignArcSen/: ZmSignArcSen_v1.qml  qmldir
android/assets/modules/ZoolandNumCalc/: ZoolandNumCalc_v1.qml  qmldir
android/assets/modules/ZoolandNumCalc/NumCalcLog/: NumCalcLog_v_1_0.qml
jsons/: Fernando_Pintos.json  Natalia_S._Pintos.json
libs/swisseph/: sweephe4.c
